Vendingmachinelab/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab
-d
C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab\vendingmachine.java
<---- end of javadoc command ---->
Loading source file C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab\vendingmachine.java...
C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab\vendingmachine.java:26: error: ';' expected
        cans = 0
                ^
C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab\vendingmachine.java:27: error: ';' expected
        tokens = 0
                  ^
C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab\vendingmachine.java:32: error: ';' expected
        tokens = tokens + 1 
                           ^
C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab\vendingmachine.java:50: error: illegal start of expression
        public void insertToken() 
        ^
C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab\vendingmachine.java:50: error: illegal start of expression
        public void insertToken() 
               ^
C:\Users\ribrumfield\Desktop\GitHub\unit2Classes\Vendingmachinelab\vendingmachine.java:50: error: ';' expected
        public void insertToken() 
                               ^
6 errors
